block about, Title, TitleSise etc

--- a/farm/src/components/layout/page-wrapper/style.css
+++ b/farm/src/components/layout/page-wrapper/style.css
@@ -1,7 +1,5 @@
 .page-wrapper__main {
-    width: 1280px;
+    width: 100%;
     margin: 0 auto;
     padding-bottom: 80px;
-    padding-right: 100px;
-    padding-left: 100px;
   }
