frontpage previously done

--- a/farm/src/components/ui/subtitle/style.css
+++ b/farm/src/components/ui/subtitle/style.css
@@ -1,8 +1,8 @@
 .subtitle {
     margin: 0;
-    padding: 0;
-    font-weight: 700;
-    font-size: 14px;
+    padding: 0 5%;
+    font-weight: 100;
+    font-size: 16px;
     line-height: 41px;
     color: #FFFFFF;
     background-color: #88AA4D;
